改为继承StringItem